--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <div class="gridContainer"></div>
+    </main>
     <footer></footer>
-    <script></script>
+    <script>
+        function createGrid(size){
+            const gridContainer = document.querySelector('.gridContainer');
+            gridContainer.innerHTML = '';
+            gridContainer.style['grid-template-columns'] = `repeat(${size}, 1fr)`;
+            for (let i = 0; i < size**2; i++) {
+                const div = document.createElement('div');
+                div.classList.add('gridItem');
+                gridContainer.appendChild(div);
+            }
+        }
+    </script>
+    <style>
+        .gridContainer {
+            display: grid;
+            background-color: gray;
+            height: 500px;
+            width: 500px;
+            margin: 0 auto;
+            
+        }
+    </style>
 </body>
 </html>
