--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
             for (let i = 0; i < size**2; i++) {
                 const div = document.createElement('div');
                 div.classList.add('gridItem');
+                div.addEventListener('mouseenter', () => {
+                    div.style["backgroundColor"]='black';
+                })
                 gridContainer.appendChild(div);
             }
+        }
+        function addHoverListener(obj) {
+            
         }
     </script>
     <style>
         .gridContainer {
             display: grid;
-            background-color: gray;
+            background-color: white;
             height: 500px;
             width: 500px;
             margin: 0 auto;
-            
         }
     </style>
 </body>
